--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <div class="bg">
-        <img src="./img/button.png" alt="" class="bg__img bg__img--button">
+        <div class="square-container">
+            <img src="./img/button.png" alt="" class="bg__img bg__img--square">
+        </div>
         <img src="./img/dots.png" alt="" class="bg__img bg__img--dots">
         <img src="./img/LogoWhite.png" alt="" class="bg__img bg__img--logo">
     </div>
@@ -22,7 +24,7 @@
         <header>
             <h1>Learn, teach, recruit!</h1>
             <p>Aplikacja od studentów dla studentów pomagająca w studiowaniu na różnych płaszczyznach. Ucz się z innymi, od innych i dla innych.
-                <a href="https://jakzaczacprogramowac.pl">
+                <a href="">
                     Pobierz aplikację już teraz!
                 </a> 
             </p>
@@ -30,31 +32,33 @@
         <main>
             <section>
                 <div class="people">
-                    <div class="person">
-                        <div class="person__img person__img--Kacper">
-                            <img src="./img/Kacper.jpg" alt="">
+                    <div class="people--firstColumn">
+                        <div class="person">
+                            <div class="person__img person__img--Kacper">
+                                <img src="./img/Kacper.jpg" alt="">
+                            </div>
+                            <span class="person__name">Kacper Budniak</span>
                         </div>
-                        <span class="person__name">Kacper Budniak</span>
+                        <div class="person">
+                            <div class="person__img person__img--Kuba">
+                                <img src="./img/Kuba.jpg" alt="">
+                            </div>
+                            <span class="person__name">Kuba Możejko</span>
+                        </div>
                     </div>
-                    <div class="person">
-                        <div class="person__img person__img--Kuba">
-                            <img src="./img/Kuba.jpg" alt="">
+                    <div class="people--secondColumn">
+                        <div class="person">
+                            <div class="person__img person__img--KamilP">
+                                <img src="./img/KamilP.jpg" alt="">
+                            </div>
+                            <span class="person__name">Kamil Plewka</span>
                         </div>
-                        <span class="person__name">Kuba Możejko</span>
-                    </div>
-                </div>
-                <div class="people">
-                    <div class="person">
-                        <div class="person__img person__img--KamilP">
-                            <img src="./img/KamilP.jpg" alt="">
+                        <div class="person">
+                            <div class="person__img person__img--KamilS">
+                                <img src="./img/KamilS.jpg" alt="">
+                            </div>
+                            <span class="person__name">Kamil Schlagowski</span>
                         </div>
-                        <span class="person__name">Kamil Plewka</span>
-                    </div>
-                    <div class="person">
-                        <div class="person__img person__img--KamilS">
-                            <img src="./img/KamilS.jpg" alt="">
-                        </div>
-                        <span class="person__name">Kamil Schlagowski</span>
                     </div>
                 </div>
             </section>
