--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
         <div class="square-container">
             <img src="./img/button.png" alt="" class="bg__img bg__img--square">
         </div>
-        <img src="./img/dots.png" alt="" class="bg__img bg__img--dots">
+        <div class="dots-container">
+            <img src="./img/dots.png" alt="" class="bg__img bg__img--dots">
+        </div>
         <img src="./img/LogoWhite.png" alt="" class="bg__img bg__img--logo">
     </div>
     <div class="container">
         <div class="logo">
-            <img src="./img/LogoBlue.png" alt="" class="">
+            <img src="./img/LogoBlue.png" alt="" class="logoBlue">
+            <!-- <img src="./img/LogoWhite.png" alt="" class="logoWhite"> -->
         </div>
         <header>
             <h1>Learn, teach, recruit!</h1>
@@ -67,6 +70,9 @@
                 <p>Zapisz się na Newsletter, a co dwa tygodnie będziemy się dzielić z Tobą naszą wiedzą i doświadczeniem. Dorzucimy do tego ciekawe artykuły, linki i pomysły na projekty.</p>
                 <p>Pomożemy ci w nauce!</p>
                 <p>Jesteś na pierwszym roku studiów?</p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
                 <button>Zapisuję się!</button>
             </section>
             
